# PureBeurreDeploiement

./: .travis.yml  README.md  manage.py  pyproject.toml  requirements.txt  requirements_travis.txt
doc/: .~lock.P10_01_demarche.odt#  .~lock.presentation.odp#  P10_01_demarche.odt  P10_01_demarchecreation.odt  presentation.odp
pureBeurre/: asgi.py  settings.py
pureBeurre/settings/: __init__.py  settings.py  travis.py
pureBeurre/setttings/: travis.py
spaceUser/migrations/: 0002_auto_20211202_1005.py
tests/tests_functional/: test_identification.py
