[tool.poetry]
name = "purebeurredeploiement"
version = "0.1.0"
description = "it is a study project where the application must be deployed on digitalocean, using travis, centry, relicnews, create a cron task, install gunicorn and ngnix on an ubuntu server."
authors = ["jbbaillet <jbbaillet.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.9"
psycopg2 = "^2.9.2"
django-import-export = "^2.6.1"
Pillow = "^8.4.0"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-django = "^4.4.0"
flake8 = "^4.0.1"
selenium = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
